cms_blogger/static/cms_blogger/css/entry-change-form.css
/* ... */
/* line 261, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .poster-image .poster-image-container .progress .fileUploadProgress {
  border: 1px solid #bebebe;
  background-color: #efefef;
}
/* line 264, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .poster-image .poster-image-container .progress .fileUploadProgress .fileUploadProgressBar {
  background-color: #3482af;
}
/* line 273, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .select2-container {
  width: 84%;
  min-width: 88%;
  display: inline-block;
  float: none;
}
/* line 278, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .select2-container .select2-choices {
  padding-top: 5px;
  background-image: none;
}
/* line 285, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content label {
  font-size: 16px;
  font-weight: normal !important;
  color: #474747;
}
/* line 291, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .module {
  border: 1px solid #bebebe;
  background: none;
}
/* line 296, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .main-col {
  width: 685px;
  margin-right: 20px;
}
/* line 300, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .main-col .module:first-child,
.cms_blogger-blogentrypage #content .main-col .no-border {
  border: none;
}
/* line 304, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .main-col .module:last-child {
  margin-bottom: 0;
}
/* line 308, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .main-col .form-row {
  white-space: nowrap;
  padding: 13px 0;
}
/* line 313, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .main-col .form-row.field-preview_on_top, .cms_blogger-blogentrypage #content .main-col .form-row.field-body, .cms_blogger-blogentrypage #content .main-col .form-row.field-preview_on_bottom {
  padding: 5px 0;
}
/* line 316, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .main-col .form-row:first-child {
  padding-top: 0;
}
/* line 319, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .main-col .form-row label {
  white-space: normal;
}
/* line 324, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .main-col .field-short_description {
  position: relative;
  overflow: visible;
}
/* line 327, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .main-col .field-short_description .help {
  font-size: 12px;
  font-style: italic;
  color: #474747;
  padding: 0;
}
/* line 332, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .main-col .field-short_description .help:before {
  content: "(";
}
/* line 335, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .main-col .field-short_description .help:after {
  content: ")";
}
/* line 340, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .main-col label {
  font-size: 16px;
  font-weight: normal !important;
  color: #474747;
  width: 10%;
  padding-right: 0;
  margin-right: 2%;
  display: inline-block;
}
/* line 348, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .main-col label[for="id_short_description"] {
  white-space: nowrap !important;
  width: 22%;
}
/* line 352, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .main-col label[for="id_short_description"] + textarea, .cms_blogger-blogentrypage #content .main-col label[for="id_short_description"] + .help + textarea {
  width: 74.7%;
  resize: vertical;
}
/* line 357, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .main-col label[for="id_short_description"] + .help {
  display: inline-block;
  top: 0;
  left: 0;
  float: left;
  clear: left;
  margin: 0;
}
/* line 366, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content .main-col label[for="id_body"] {
  display: none;
}
/* line 373, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content div.right-col {
  width: 315px;
}
/* line 375, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content div.right-col > fieldset {
  width: auto;
  padding: 15px;
  margin-bottom: 25px;
}
/* line 382, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content div.right-col > fieldset .field-seo_title,
.cms_blogger-blogentrypage #content div.right-col > fieldset .field-meta_keywords,
.cms_blogger-blogentrypage #content div.right-col > fieldset .field-disqus_enabled, .cms_blogger-blogentrypage #content div.right-col > fieldset .field-enable_poster_image {
  white-space: nowrap;
  padding: 25px 0 0 0;
  width: 100%;
}
/* line 387, ../sass/imports/entry_change_form/_layout.scss */
.cms_blogger-blogentrypage #content div.right-col > fieldset .field-seo_title input,
.cms_blogger-blogentrypage #content div.right-col > fieldset .field-seo_title textarea,
.cms_blogger-blogentrypage #content div.right-col > fieldset .field-meta_keywords input,
.cms_blogger-blogentrypage #content div.right-col > fieldset .field-meta_keywords textarea,
.cms_blogger-blogentrypage #content div.right-col > fieldset .field-disqus_enabled input,
.cms_blogger-blogentrypage #content div.right-col > fieldset .field-disqus_enabled textarea, .cms_blogger-blogentrypage #content div.right-col > fieldset .field-enable_poster_image input,
.cms_blogger-blogentrypage #content div.right-col > fieldset .field-enable_poster_image textarea {
  width: 68%;
  white-space: normal;
}
/* ... */

